Fixed Framing
Added some more divs so the react flow wouldnt be cut off

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html, body, #root, .App{
 .App {
   text-align: center;
   display: grid;
-  grid-template-rows: 50px auto;
+  grid-template-rows: 50px 1fr;
   width: 100%;
   height: 100%;
 }
@@ -23,19 +23,20 @@ html, body, #root, .App{
 
 .App-content {
   grid-row: 2;
-  height: auto;
   width: 100%;
+  height: auto;
   background-color: #7186b8;
 
 }
 
-
+/* 
 .ReactFlowWrapper {
   height: auto;
   width: 100%;
   background-color: #7186b8;
+  position: relative;
 
-}
+} */
 
 /* .MuiPopover-root{
 
